--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,7 +1,8 @@
-<h1>Articles Tagged with <%= @tag.name %></h1>
-
-<ul>
+<h1><%= @tag.name %></h1>
+<p>
+  Articles:
   <% @tag.articles.each do |article| %>
-    <li><%= link_to article.title, article_path(article) %></li>
+    <%= link_to article.title, article_path(article) %>
   <% end %>
-</ul>
+</p>
+
